# vision-segmentation-autonomous-driving

./: .gitignore  README.md  constraints.lock.txt  environment.yml  requirements.lock.txt
carla_tools/: batch_collect.py  collect_carla_cityscapes.py  collect_pedestrian_heavy_carla.py  collect_sign_heavy_carla.py  collect_vru_heavy_carla.py  convert_carla_sem_to_cityscapes19.py  filter_cityscapes19_dataset.py  make_cityscapes_subset.py  prune_static_frames.py  target_switch_map.py
configs/cityscapes/: segformer_b0_cityscapes.py  segformer_b0_cityscapes_carla_ft.py  segformer_b0_cityscapes_carla_mixed_ft.py  segformer_b0_cityscapes_carla_mixed_refine.py  segformer_b0_signheavy_refine_8k.py  segformer_b0_vruheavy_refine_20k.py  segformer_b0_vruheavy_refine_30k.py  segformer_b0_vruheavy_refine_8k.py
configs/pets/: segformer_b0_pets.py
docs/: README.md  setup.md  timeline.md
docs/experiments/: parameter_tuning_log.md
docs/milestones/: accumulated_local_mapping.md  (+5 more)
notes/: setup.txt
ros/ros2_ws/src/lane_detection_node/: package.xml  setup.cfg  setup.py
ros/ros2_ws/src/lane_detection_node/lane_detection_node/: lane_detection_node.py
ros/ros2_ws/src/lane_reasoning_nodes/: package.xml  setup.cfg  setup.py
ros/ros2_ws/src/lane_reasoning_nodes/lane_reasoning_nodes/: lane_guidance_node.py  lane_mapping_node.py  lane_projection_node.py
scripts/: convert_pets_to_mmseg.py  eval_mmseg.py  export_val_overlays.py  infer_trained.py  infer_trained_noinferencer.py  mask_colouring.py  preview_overlays.py  train_from_cfg.py  untrained_infer_noinferencer.py
(+70 files in other folders)
