<?xml version="1.0"?>
<package format="3">
  <name>lane_detection_node</name>
  <version>0.1.0</version>
  <description>Classical lane detection node using RGB images and semantic road ROI.</description>

  <maintainer email="maintainer@example.com">Daniel Martinez</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
